--- a/15.04.2024.html
+++ b/15.04.2024.html
@@ -41,15 +41,12 @@
     </form>
     <form>
       
-            <textarea disabled></textarea>
-                <input type = "text" readonly>
-                <input list = "lista">
-                <datalist>
-                    <option value = "opcja 1">
-
-                    </option>
-                    </datalist>
-                </datalist>
+ <textarea disabled></textarea>
+ <input type = "text" readonly>
+ <input list = "lista">
+ <datalist id="lista">
+ <option value = "opcja 1"></option>
+</datalist>
                 <input type = "text" autocomplete = "off">
                 <input type = "text"
                 pattern="[0-9]{2}- [0-9]{3}" placeholder="00-000">
