Update Nowy Dokument tekstowy.html

--- a/strona internetowa 12.09.24/Nowy Dokument tekstowy.html
+++ b/strona internetowa 12.09.24/Nowy Dokument tekstowy.html
@@ -22,10 +22,16 @@
      Samica może mierzyć do 2,5 metra, a samiec nawet ponad 4 metry wysokości. 
      Są one zatem dwa razy wyższe od człowieka. Słoń może ważyć nawet do sześciu ton, czyli tyle co autobus!</div>
 <br>
+
 <h4><u>2.Wieloryb błękitny</u></h4>
-<img src="zdjęcie2.jpg" width="200" height="170" alt="Wieloryb błękitny">
+<div><img src="zdjęcie2.jpg" width="200" height="170" alt="Wieloryb błękitny">Płetwal błękitny – gatunek ssaka morskiego z rodziny płetwalowatych.
+     Największe znane zwierzę w historii Ziemi. Po raz pierwszy został opisany przez szkockiego lekarza Roberta Sibbalda w 1697 roku.</div>
+
+<br>
+
 <h4>3.Nosorożec biały</h4>
-<img src="zdjecie3.jpg" width="200" height="170" alt="Nosorożec biały">
+<div><img src="zdjecie3.jpg" width="200" height="170" alt="Nosorożec biały">Nosorożec biały – gatunek ssaka nieparzystokopytnego z rodziny nosorożcowatych. 
+    Jest to największy z żyjących obecnie nosorożców, czwarty największy lądowy ssak. Długość ciała wynosi 340–420 cm, a masa 1350–3500 kg.</div>
 
 
 </body>
